--- a/BFC/float.html
+++ b/BFC/float.html
@@ -46,6 +46,9 @@
         <img src="img.jpeg" id="float1" />
         <em>文字文字</em>
     </div>
+    底部文字底部文字
+    <span>底部span</span>
+    <div>底部div底部div底部div底部div底部div</div>
     <div>
         float:
         <select id="float">
